styles.css
:root {
  --main-text-color: #4b5563;
  --alt-text-color: #111827;
  --main-bg-color: #f4f8ff;
  --alt-bg-color: #4b5563;
  --tag-bg-color: #d1e2ff;
}

body {
  font-family: "Inter", sans-serif;
  background-color: #fff;
}

header {
  display: flex;
  padding: 1rem 5rem;
  justify-content: flex-end;
  align-items: center;
  gap: 1rem;
  align-self: stretch;
}

.mobile-nav-toggle {
  display: none;
}

.primary-nav {
  margin: 0;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 1.5rem;
  list-style: none;
}

header a {
  text-decoration: none;
  line-height: 1.5rem;
  font-weight: 500;
  color: var(--main-text-color);
}

.hero {
  height: calc(100vh - 3.5rem);
  background: url("assets/heroimage.webp");
  background-size: cover;
  background-position-y: center;
  background-position-x: center;
  background-repeat: no-repeat;
  display: flex;
  padding: 0 5rem;
  flex-direction: column;
  align-items: flex-end;
  gap: 2.25rem;
  align-self: stretch;
  justify-content: center;
  color: white;
}

.hero h1,
.hero h2 {
  margin: 0;
  text-align: right;
  font-style: normal;
  line-height: 4.5rem;
  letter-spacing: -0.075rem;
}
.hero h1 {
  font-size: 3.75rem;
  font-weight: 700;
}
.hero h2 {
  font-size: 2.25rem;
  font-weight: 600;
  line-height: 2.5rem;
  letter-spacing: -0.045rem;
}
.hero .cta {
  color: var(--alt-text-color);
  background-color: #cfddf5;
  padding: 0.375rem 1rem;
  font-size: 1.25rem;
  font-weight: 500;
  text-decoration: none;
}

h3 {
  text-align: center;
  color: var(--alt-text-color);
  font-size: 1.875rem;
  font-weight: 600;
  line-height: 2.25rem;
  letter-spacing: -0.0375rem;
  margin: 0;
}

.about {
  display: flex;
  justify-content: center;
  padding: 6rem 4rem;
}

.about-container {
  display: flex;
  flex-direction: column;
  max-width: 900px;
  gap: 1.5rem;
}

.about-text {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.about-text p {
  margin: 0;
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-weight: 400;
  color: var(--main-text-color);
}

.skills {
  display: flex;
  flex-direction: column;
  background-color: var(--main-bg-color);
  padding: 6rem 4rem;
}

.skills-container {
  display: flex;
  flex-direction: column;
  gap: 3rem;
}

.section-header {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.section-header p {
  color: var(--main-text-color);
  text-align: center;
  font-size: 1.25rem;
  font-weight: 400;
  margin: 0;
}

.skills-tech {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
}

.tech {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  margin: 0 0.7rem;
}

.tech img {
  width: 4rem;
  height: 4rem;
}

.tech p {
  margin: 0;
  text-align: center;
}

.projects {
  display: flex;
  flex-direction: column;
  padding: 6rem 4rem;
  gap: 3rem;
  justify-content: center;
}

.project {
  overflow: hidden;
  border-radius: 0.75rem;
  background-color: white;
  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.06),
    0px 4px 3px 0px rgba(0, 0, 0, 0.07);
  display: flex;
  width: 100%;
  max-width: 72rem;
}

.project > * {
  flex: 1 1 50%;
  padding: 3rem;
}

.project-img {
  display: flex;
  /* width: 50%; */
  align-self: stretch;

  height: 100%;
  background-color: var(--main-bg-color);
  justify-content: center;
  align-items: center;
}

.project-img img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.project-text {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.project-text h4 {
  color: var(--alt-text-color);
  margin: 0;
  font-size: 1.25rem;
  font-weight: 600;
  line-height: 1.75rem;
}

.project-text p {
  color: var(--main-text-color);
  font-weight: 400;
  line-height: 1.5rem;
  margin: 0;
}

.tags {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.tags span {
  background-color: var(--tag-bg-color);
  color: var(--main-text-color);
  border-radius: 0.75rem;
  padding: 0.25rem 1.25rem;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5rem;
}

.project-even {
  flex-direction: row-reverse;
}

.contact {
  display: flex;
  flex-direction: column;
  padding: 6rem 4rem;
  gap: 3rem;
  justify-content: center;
  align-items: center;
  background-color: var(--main-bg-color);
}

.email {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
}

.email img {
  width: 2rem;
  height: 2rem;
}

.email-text {
  color: var(--alt-text-color);
  font-size: 2.25rem;
  font-weight: 600;
  line-height: 2.5rem;
  letter-spacing: -0.045rem;
}

.copy-button {
  background: url("assets/copy.svg");
  background-size: cover;
  background-repeat: no-repeat;
  border: 0;
  padding: 0;
  aspect-ratio: 1;
  width: 2rem;

}

.button-container {
  position: relative;
  display: flex;
}
.tooltip {
  display: none;
  position: absolute;
  top: -2rem;
  left: -100%;
  background-color: var(--tag-bg-color);
  padding: 0.25rem 1.25rem;
  border-radius: 0.75rem;
}

.tooltip[data-visible="true"] {
  display: inline-block;
}

.social {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3rem;
}

.social p {
  margin: 0;
  color: var(--main-text-color);
  line-height: 1.5rem;
}

.social img {
  width: 2.5rem;
  height: 2.5rem;
}

footer {
  display: flex;
  padding: 1.5rem 5rem;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

footer p {
  margin: 0;
}

@media (max-width: 768px) {
  header {
    padding: 1rem 1rem;
  }

  
  .primary-nav {
    position: fixed;
    inset: 0 0 0 15%;
    box-shadow: 0px 25px 25px 0px rgba(0, 0, 0, 0.15);
    background: hsl(0 0% 100% / 0.9);
    backdrop-filter: blur(10px);
    flex-direction: column;
    gap: 1rem;
    padding: 10rem 1rem;
    align-items: flex-start;
    justify-content: flex-start;
    transform: translateX(100%);

    transition: transform 0.3s ease-in-out;
  }

  .primary-nav[data-visible="true"] {
    transform: translateX(0);
  }


  .mobile-nav-toggle {
    display: block;
    background: url("assets/hamburger.svg");
    background-size: cover;
    background-repeat: no-repeat;
    border: 0;
    cursor: pointer;
    padding: 0;
    aspect-ratio: 1;
    width: 2rem;
    z-index: 100;
  }

  .mobile-nav-toggle[aria-expanded="true"] {
    background: url("assets/close.svg");
    background-size:cover;
    background-repeat: no-repeat;
  }


  section {
    padding: 4rem 1rem !important;
  }
  .hero {
    gap: 0.5rem;
  }

  .hero h1 {
    font-size: 2.25rem;
    font-weight: 600;
    line-height: 2.5rem;
  }

  .hero h2 {
    font-size: 1.125rem;
    font-weight: 600;
    line-height: 1.75rem;
    letter-spacing: -0.0225rem;
  }

  .about-container {
    gap: 2.25rem;
  }

  .about-text {
    /* gap: 0.5rem; */
  }

  .skills-tech > * {
    flex: 1 0 20%;
  }

  .project {
    flex-direction: column;
  }

  .project-even {
  flex-direction: column;
  }

  .project-img {
    padding: 2rem;
  }
  
  .project-img img {
    aspect-ratio: 21/16;
    object-position: 50% top;
  }

  .project-text {
    padding: 2rem;
  }

  .email {
    gap: 0.5rem;
  }

  .email img {
    width: 1.5rem;
    height: 1.5rem;
  }
  
  .email-text {
    font-size: 1.125rem;
    line-height: 1.75rem;
  }
  
  .social p {
    text-align: center;
  }

  footer {
    font-size: 0.875rem;
    line-height: 1.25rem;
  }
}

